--- a/tableau page/perceptive-analytics.com/tableau-consultants/index.html
+++ b/tableau page/perceptive-analytics.com/tableau-consultants/index.html
@@ -85,13 +85,14 @@
   gtag('js', new Date());
   gtag('config', 'UA-22731857-1');
 </script>
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto|Open+Sans|Montserrat|Lato|Source+Sans+Pro">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto|Open+Sans|Montserrat|Lato|Source+Sans+Pro|sf_pro_displaylight">
+<link href="//db.onlinewebfonts.com/c/70c38766a71f8f7f0a477605da15fcd3?family=SF+Pro+Display" rel="stylesheet" type="text/css"/>
 <style>
-	*{
-		font-family: Lato !important;
-	}
+	/* *{
+		
+		font-family:sf_pro_displaylight !important;
+	} */
 </style>
-	
 	</head>
 	<body>
 		<div class="wrapper">
@@ -282,14 +283,35 @@
 														</div>
 														<div class="col-lg-4 col-md-4 col-sm-4 howitworks_list">
 															<div class="services_list">
-																<center><img src="images/excel-to-tableau.png" alt="Tableau consultant" height="75px" ></center><h5><strong> Excel To Tableau Conversion</strong></h5>
+																<center><img src="images/excel-to-tableau.png" alt="Tableau consultant" height="75px" ></center><h5><strong> Migration To Tableau</strong></h5>
 																<p>Convert Excel, OBIEE, Cognos reports into Tableau Dashboards.</p></center>
 															</div>
 														</div>
 														<div class="col-lg-4 col-md-4 col-sm-4 howitworks_list">
 															<div class="services_list">
+																<center><img src="images/executive.png" alt="Tableau Consultant, Tableau consulting" height="75px" ></center><h5><strong> Executive Dashboard</strong></h5>
+																<p>Get a panoramic view of your organization's pulse with our comprehensive executive dashboard.</p></center>
+															</div>
+														</div>
+													</div>
+													<div class="row howitworks_row">
+														<div class="col-lg-4 col-md-4 col-sm-4 howitworks_list">
+															<div class="services_list">
 																<center><img src="images/adv-viz.png" alt="Tableau Consultant, Tableau consulting" height="75px" ><h5><strong> Advanced Data Viz</strong></h5>
 																<p>Create advanced data visualizations.</p></center>
+															</div>
+														</div>
+														
+														<div class="col-lg-4 col-md-4 col-sm-4 howitworks_list">
+															<div class="services_list">
+																<center><img src="images/team.jpg" alt="Tableau Consultant, Tableau consulting" height="75px" ></center><h5><strong> Be Your Team</strong></h5>
+																<p>Be your Tableau / BI Team or an extension of your team.</p></center>
+															</div>
+														</div>
+														<div class="col-lg-4 col-md-4 col-sm-4 howitworks_list">
+															<div class="services_list">
+																<center><img src="images/etl.png" alt="Tableau Consultant, Tableau consulting" height="75px" ></center><h5><strong>Extract Transform Load</strong></h5>
+																<p>Streamline your ETL process for maximum efficiency.</p></center>
 															</div>
 														</div>
 													</div>
@@ -300,17 +322,18 @@
 																<p>Fine-tune performance of heavy Tableau dashboards.</p></center>
 															</div>
 														</div>
+														
 														<div class="col-lg-4 col-md-4 col-sm-4 howitworks_list">
 															<div class="services_list">
-																<center><img src="images/team.jpg" alt="Tableau Consultant, Tableau consulting" height="75px" ></center><h5><strong> Be Your Team</strong></h5>
-																<p>Be your Tableau / BI Team or an extension of your team.</p></center>
+																<center><img src="images/infrastructure.png" alt="Tableau Consultant, Tableau consulting" height="75px" ></center><h5><strong>Data Infrastructure</strong></h5>
+																<p>Empower your data infrastructure for optimal performance.</p></center>
 															</div>
 														</div>
 														<div class="col-lg-4 col-md-4 col-sm-4 howitworks_list">
-															<div class="services_list">
-																<center><img src="images/wdc.png" alt="Tableau Consultant, Tableau consulting" height="75px" ></center><h5><strong> Web Data Connectors</strong></h5>
+															<!-- <div class="services_list">
+																<center><img src="images/etl.png" alt="Tableau Consultant, Tableau consulting" height="75px" ></center><h5><strong>Extract Transform Load</strong></h5>
 																<p>Create web data connectors, Tableau plugins or extensions.</p></center>
-															</div>
+															</div> -->
 														</div>
 													</div>
 												</div>
