--- a/tableau page/perceptive-analytics.com/tableau-consultants/index.html
+++ b/tableau page/perceptive-analytics.com/tableau-consultants/index.html
@@ -276,20 +276,20 @@
 													<div class="row howitworks_row">
 														<div class="col-lg-4 col-md-4 col-sm-4 howitworks_list">
 															<div class="services_list">
-																<center><img src="images/tab.png" alt="Tableau Consultant, Tableau consulting" height="75px" ></br>
+																<center><img src="images/tab.png" alt="Tableau Consultant, Tableau consulting" height="75px" style="opacity: 75%;"></br>
 																<h5><strong>Implement Tableau</strong></h5>
 																<p> Implement Tableau to further self-service BI strategy.</p></center>
 															</div>
 														</div>
 														<div class="col-lg-4 col-md-4 col-sm-4 howitworks_list">
 															<div class="services_list">
-																<center><img src="images/excel-to-tableau.png" alt="Tableau consultant" height="75px" ></center><h5><strong> Migration To Tableau</strong></h5>
+																<center><img src="images/migration-to-tableau.png" alt="Tableau consultant" height="75px" style="opacity: 75%;"></center><h5><strong> Migration To Tableau</strong></h5>
 																<p>Convert Excel, OBIEE, Cognos reports into Tableau Dashboards.</p></center>
 															</div>
 														</div>
 														<div class="col-lg-4 col-md-4 col-sm-4 howitworks_list">
 															<div class="services_list">
-																<center><img src="images/executive.png" alt="Tableau Consultant, Tableau consulting" height="75px" ></center><h5><strong> Executive Dashboard</strong></h5>
+																<center><img src="images/executive.png" alt="Tableau Consultant, Tableau consulting" height="75px" style="opacity: 75%;"></center><h5><strong> Executive Dashboard</strong></h5>
 																<p>Get a panoramic view of your organization's pulse with our comprehensive executive dashboard.</p></center>
 															</div>
 														</div>
@@ -297,7 +297,7 @@
 													<div class="row howitworks_row">
 														<div class="col-lg-4 col-md-4 col-sm-4 howitworks_list">
 															<div class="services_list">
-																<center><img src="images/adv-viz.png" alt="Tableau Consultant, Tableau consulting" height="75px" ><h5><strong> Advanced Data Viz</strong></h5>
+																<center><img src="images/adv-viz.png" alt="Tableau Consultant, Tableau consulting" height="75px" style="opacity: 75%;"><h5><strong> Advanced Data Viz</strong></h5>
 																<p>Create advanced data visualizations.</p></center>
 															</div>
 														</div>
@@ -310,7 +310,7 @@
 														</div>
 														<div class="col-lg-4 col-md-4 col-sm-4 howitworks_list">
 															<div class="services_list">
-																<center><img src="images/etl.png" alt="Tableau Consultant, Tableau consulting" height="75px" ></center><h5><strong>Extract Transform Load</strong></h5>
+																<center><img src="images/etl.png" alt="Tableau Consultant, Tableau consulting" height="75px" style="opacity: 75%;" ></center><h5><strong>Extract Transform Load</strong></h5>
 																<p>Streamline your ETL process for maximum efficiency.</p></center>
 															</div>
 														</div>
@@ -325,7 +325,7 @@
 														
 														<div class="col-lg-4 col-md-4 col-sm-4 howitworks_list">
 															<div class="services_list">
-																<center><img src="images/infrastructure.png" alt="Tableau Consultant, Tableau consulting" height="75px" ></center><h5><strong>Data Infrastructure</strong></h5>
+																<center><img src="images/infrastructure.png" alt="Tableau Consultant, Tableau consulting" height="75px" style="opacity: 70%;" ></center><h5><strong>Data Infrastructure</strong></h5>
 																<p>Empower your data infrastructure for optimal performance.</p></center>
 															</div>
 														</div>
