--- a/tableau page/perceptive-analytics.com/tableau-consultants/index.html
+++ b/tableau page/perceptive-analytics.com/tableau-consultants/index.html
@@ -297,7 +297,7 @@
 													<div class="row howitworks_row">
 														<div class="col-lg-4 col-md-4 col-sm-4 howitworks_list">
 															<div class="services_list">
-																<center><img src="images/adv-viz.png" alt="Tableau Consultant, Tableau consulting" height="75px" style="opacity: 75%;"><h5><strong> Advanced Data Viz</strong></h5>
+																<center><img src="images/adv-viz.webp" alt="Tableau Consultant, Tableau consulting" height="75px" style="opacity: 75%;"><h5><strong> Advanced Data Viz</strong></h5>
 																<p>Create advanced data visualizations.</p></center>
 															</div>
 														</div>
